# afs_scawful

./: .gitignore  AGENTS.md  LICENSE  PROJECT.toml  README.md  pyproject.toml  test_model.py
.context/: metadata.json
config/: budget.toml  chat_registry.toml  infra.toml
data/: bank_00_routines.json  symbols_map.json
docs/: AGENT_TOOL_POLICY.md  ASM_MODEL_TRAINING_AGENT_HANDOFF.md  ASM_MODEL_TRAINING_RUN_20251231.md  ASM_MODEL_TRAINING_STATUS.md  CHAT_HARNESS.md  CLOUD_MODEL_INTEGRATIONS.md  CONTEXT_INVENTORY.md  CURRENT_STATE.md  DATASET_LIFECYCLE.md  DATASET_QA_SUMMARY.md  MODEL_NAMING.md  MODEL_PORTFOLIO.md  MODEL_STRATEGY.md  NAYRU_V5_TRAINING.md  NERV_HARDWARE_BRIDGE.md  OCR_INGESTION.md  PDF_WORKFLOW.md  REPO_FACTS.json  ROADMAP.md  SKILLS_INTEGRATION.md  STATUS.md  STORAGE_LAYOUT.md  TRAINING_DATA_INVENTORY.md  TRAINING_PLAN.md  TRAINING_ROADMAP.md  VAST_SETUP.md  WINDOWS_DEV_STRATEGY.md  WINDOWS_WORKFLOW.md  ZELDA_16B_TRAINING_PLAN.md  advanced_training_plan.md
policies/: agent_tools.json
scripts/: agent_delete.py  autonomous_training.sh  build_dataset_registry.py  build_gold_dataset.py  build_zelda_mix.py  convert_to_gguf.py  dataset_qa_summary.py  evaluate_model.py  full_pipeline.sh  generate_asm_comment_samples.py  generate_autocomplete_dataset.py  generate_comment_to_code_dataset.py  generate_cot_examples.py  generate_eval_label_free_fixups.py  generate_git_history_samples.py  generate_nerv_dataset.py  generate_oos_enriched_dataset.py  generate_router_dataset.py  generate_routine_training_samples.py  ingest_ocr.py  install_windows_helpers.sh  (+18 more)
(+191 files in other folders)
