[project]
name = "afs_scawful"
version = "0.0.0"
description = "AFS Scawful plugin package"
requires-python = ">=3.11"
license = {text = "All rights reserved"}
authors = [
  {name = "scawful"}
]

[project.optional-dependencies]
test = [
  "pytest>=7.4"
]
research = [
  "pypdf>=4.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
